force-app/main/default/objects/ProgramacionDeVentas__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <label>Comentario</label>
    <type>TextArea</type>
</CustomField>