force-app/main/default/objects/ProgramacionDeVentas__c/fields/MesAno__c.field-meta.xml
<CustomField>
    <fullName>MesAno__c</fullName>
    <formula>Mes__c &amp; &quot; &quot; &amp; TEXT ( YEAR ( Fecha__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes/Año</label>
    <type>Text</type>
</CustomField>