force-app/main/default/objects/ProgramacionDeVentas__c/fields/PlanificacionComercial__c.field-meta.xml
<CustomField>
    <fullName>PlanificacionComercial__c</fullName>
    <label>Planificación Comercial</label>
    <referenceTo>PlanificacionComercial__c</referenceTo>
    <relationshipLabel>Programaciones de Ventas</relationshipLabel>
    <relationshipName>Programaciones_de_Ventas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>